Assembler/tests/optimizations/comment.asm
# foo
stms s0, 8201 # 4
# bar
stms s0, 8210 # 6
